--- a/package.json
+++ b/package.json
@@ -5,10 +5,15 @@
   "main": "app.js",
   "dependencies": {
     "aedes": "^0.44.0",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.0",
     "express-throttle-bandwidth": "^1.0.1",
     "http": "0.0.1-security",
     "http-terminator": "^2.0.3",
+    "lodash": "^4.17.20",
+    "morgan": "^1.10.0",
     "mqtt": "^4.2.4",
     "mysql": "^2.18.1",
     "net": "^1.0.2",
