--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "morgan": "^1.10.0",
     "mqtt": "^4.2.4",
     "mysql": "^2.18.1",
+    "mysql2": "^2.2.5",
     "net": "^1.0.2",
     "random-token": "0.0.8",
     "websocket-stream": "^5.5.2"
