--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "delay": "^4.4.0",
+    "disk-space": "^1.1.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.0",
     "express-throttle-bandwidth": "^1.0.1",
